# stocks

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml
db/postgres/: schema.sql
doc/: Design.md
src/: database.rs  main.rs
src/routes/: item.rs  item.rs.in  location.rs  location.rs.in  mod.rs  product.rs  product.rs.in  shelf.rs  shelf.rs.in  user.rs  user.rs.in
